# pycoral_detect_ros

./: .gitignore  CMakeLists.txt  get_stream.py  package.xml  readme.md
include/pycoral_ros/: add_detection.h
launch/: add_detect.launch  camera_stream.launch  detect.launch  image_extract.launch  image_view.launch  video_stream.launch
models/: add_labels.txt  add_labelsv2.txt  cone_labels.txt
rviz/: clustering.rviz  detection.rviz  rviz.rviz
scripts/: detect_coral  topic2video.py
src/: add_detection.cpp
srv/: DetectCompressedImage.srv
